my-test/testsuite_scan/ir/SingleSource/UnitTests/Vector/LSX/lsx-vst.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:7:3: error: use of undeclared identifier '__m128i'
    7 |   __m128i __m128i_out, __m128i_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:8:3: error: unknown type name '__m128'; did you mean '__mfp8'?
    8 |   __m128  __m128_out, __m128_result;
      |   ^~~~~~
      |   __mfp8
note: '__mfp8' declared here
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:9:3: error: use of undeclared identifier '__m128d'
    9 |   __m128d __m128d_out, __m128d_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:10:3: error: use of undeclared identifier 'v2u64'
   10 |   v2u64 v2u64_op0, v2u64_op1, v2u64_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:11:3: error: use of undeclared identifier 'v4i32'
   11 |   v4i32 v4i32_op0, v4i32_op1, v4i32_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:19:3: error: use of undeclared identifier 'v2u64_op0'
   19 |   v2u64_op0 = (v2u64){0x3ab7a3fc47a5c31a, 0x1dcc4255c9d85c05};
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:19:16: error: use of undeclared identifier 'v2u64'
   19 |   v2u64_op0 = (v2u64){0x3ab7a3fc47a5c31a, 0x1dcc4255c9d85c05};
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:20:3: error: use of undeclared identifier '__m128i_result'; did you mean '__m128_result'?
   20 |   __m128i_result = (__m128i){0x0, 0x0};
      |   ^~~~~~~~~~~~~~
      |   __m128_result
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:8:23: note: '__m128_result' declared here
    8 |   __m128  __m128_out, __m128_result;
      |                       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:20:21: error: use of undeclared identifier '__m128i'
   20 |   __m128i_result = (__m128i){0x0, 0x0};
      |                     ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:21:3: error: call to undeclared function '__lsx_vst'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   21 |   __lsx_vst((__m128)v2u64_op0, (unsigned long *)&__m128i_result, 0x0);
      |   ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:21:14: error: use of undeclared identifier '__m128'; did you mean '__mfp8'?
   21 |   __lsx_vst((__m128)v2u64_op0, (unsigned long *)&__m128i_result, 0x0);
      |              ^~~~~~
note: '__mfp8' declared here
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:21:50: error: use of undeclared identifier '__m128i_result'; did you mean '__m128_result'?
   21 |   __lsx_vst((__m128)v2u64_op0, (unsigned long *)&__m128i_result, 0x0);
      |                                                  ^~~~~~~~~~~~~~
      |                                                  __m128_result
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:8:23: note: '__m128_result' declared here
    8 |   __m128  __m128_out, __m128_result;
      |                       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:22:18: error: use of undeclared identifier 'v2u64_op0'
   22 |   check_lsx_out(&v2u64_op0, &__m128i_result, sizeof(__m128i_result), __FILE__, __LINE__);
      |                  ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:22:30: error: use of undeclared identifier '__m128i_result'; did you mean '__m128_result'?
   22 |   check_lsx_out(&v2u64_op0, &__m128i_result, sizeof(__m128i_result), __FILE__, __LINE__);
      |                              ^~~~~~~~~~~~~~
      |                              __m128_result
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:8:23: note: '__m128_result' declared here
    8 |   __m128  __m128_out, __m128_result;
      |                       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:22:53: error: use of undeclared identifier '__m128i_result'; did you mean '__m128_result'?
   22 |   check_lsx_out(&v2u64_op0, &__m128i_result, sizeof(__m128i_result), __FILE__, __LINE__);
      |                                                     ^~~~~~~~~~~~~~
      |                                                     __m128_result
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:8:23: note: '__m128_result' declared here
    8 |   __m128  __m128_out, __m128_result;
      |                       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:24:3: error: use of undeclared identifier 'v2u64_op0'
   24 |   v2u64_op0 = (v2u64){0x3ab7a3fc47a5c31a, 0x1dcc4255c9d85c05};
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:24:16: error: use of undeclared identifier 'v2u64'
   24 |   v2u64_op0 = (v2u64){0x3ab7a3fc47a5c31a, 0x1dcc4255c9d85c05};
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:25:3: error: use of undeclared identifier '__m128i_result'; did you mean '__m128_result'?
   25 |   __m128i_result = (__m128i){0x0, 0x0};
      |   ^~~~~~~~~~~~~~
      |   __m128_result
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:8:23: note: '__m128_result' declared here
    8 |   __m128  __m128_out, __m128_result;
      |                       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vst.c:25:21: error: use of undeclared identifier '__m128i'
   25 |   __m128i_result = (__m128i){0x0, 0x0};
      |                     ^~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
